. [NEW] ZipUtils: Added generic functions to uncompress any .gz or .ccz file
. [FIX] CocosDenshion: Fixed possible loss of audio on iOS 4.2
. [FIX] Menu: MenuItems can draw its children (issue #458)
. [FIX] Menu: MenuItems positions can be controlled manually (issue #1013)
. [FIX] Node: convertToAR method fixed (issue #1017)
. [FIX] Node: vertexZ works OK in RetinaDisplay mode
. [FIX] RenderTexture: removed unneeded and dangerous assert in getUIImageAsDataFromBuffer
. [FIX] RenderTexture: fixed important memory leak when saving images
. [FIX] TextureCache: Improved loading time of cached PVR images (issue #998)

version 0.99.5-rc0 - 25-Oct-2010
. [NEW] AnimationCache: New class. It deprecates the CCSprite#animation methods (issue #848)
. [NEW] Animation: simplified API. Name is no longer needed. Deprecated API that uses name.
. [NEW] Animation: Animation has its own file: CCAnimation.m
. [NEW] CocosDenshion: Added duration, freq and size queries for buffers
. [NEW] Director: Added "hook" for notifications or any other kind of object like CCNotifications
. [NEW] Director: Added "enableRetinaDisplay:(BOOL)enabled"
. [NEW] EAGLView: Added support for multisampling
. [NEW] EAGLView: Added support sharegroup
. [NEW] Templates: Install HD, iPad and spotlight icons
. [FIX] Blocks: Actions and MenuItems copy the blocks instead of retaining it (issue #1007)
. [FIX] config: FONT_LABEL is disabled by default since it performs really bad on iOS >= 4.0
. [FIX] Layer: register accelerometer onEnterTransitionDidFinsih (issue #624)
. [FIX] Node: converToNodeSpace works on RetinaDisplay (issue #1000)
. [FIX] Node: all transform methods uses Points instead of Pixels (issue #999)
. [FIX] Node: onEnterTransitionDidFinsih is also called when added a node to a running node (issue #1018)
. [FIX] Node: addChild returns void, and not self in order to simplify the API
. [FIX] Node: Initializes parent_ to nil at init time
. [FIX] Node: Performance improvement in insertChild (issue #909)