@@ -63,11 +63,15 @@ enum {
  possible types of particle positions
  */
 typedef enum {
-	/** If the emitter is repositioned, the living particles won't be repositioned */
+	/** Living particles are attached to the world and are unaffected by emitter repositioning. */
 	kCCPositionTypeFree,
-	/** If the emitter is repositioned, the living particles are positioned according to their node's position */
+
+	/** Living particles are attached to the world but will follow the emitter repositioning.
+	 Use case: Attach an emitter to an sprite, and you want that the emitter follows the sprite.
+	 */
 	kCCPositionTypeRelative,
-	/** If the emitter is repositioned, the living particles will be repositioned too */
+	
+	/** Living particles are attached to the emitter and are translated along with it. */
 	kCCPositionTypeGrouped,
 }tCCPositionType;
 
@@ -171,8 +175,7 @@ typedef void (*CC_UPDATE_PARTICLE_IMP)(id, SEL, tCCParticle*, CGPoint);
 	float elapsed;
 	
 	// position is from "superclass" CocosNode
-	// Emitter centerOfGravity position
-	CGPoint centerOfGravity;
+	CGPoint sourcePosition;
 	// Position variance
 	CGPoint posVar;
 	
@@ -301,8 +304,8 @@ typedef void (*CC_UPDATE_PARTICLE_IMP)(id, SEL, tCCParticle*, CGPoint);
 @property (nonatomic,readonly) NSUInteger	particleCount;
 /** How many seconds the emitter wil run. -1 means 'forever' */
 @property (nonatomic,readwrite,assign) float duration;
-/** centerOfGravity of the emitter */
-@property (nonatomic,readwrite,assign) CGPoint centerOfGravity;
+/** sourcePosition of the emitter */
+@property (nonatomic,readwrite,assign) CGPoint sourcePosition;
 /** Position variance of the emitter */
 @property (nonatomic,readwrite,assign) CGPoint posVar;
 /** life, and life variation of each particle */
